feat: implement Phase 2 Weather Forecast Analysis System
This commit implements the complete Phase 2 Weather Forecast Analysis System with the following key features:

🌤️ Weather Infrastructure:
- Weather API client with Open-Meteo integration
- Forecast data storage in InfluxDB with proper schema
- Circuit breaker pattern for API resilience
- Comprehensive error handling and retry logic

📊 Forecast Accuracy Tracking:
- Historical forecast vs actual data comparison
- Statistical accuracy metrics (MAE, RMSE, bias)
- Forecast horizon analysis (1h, 6h, 24h, 48h)
- Automated accuracy calculation and storage

📈 Data Analysis & Profiling:
- Automated sensor data profiling with ydata-profiling
- Association rule mining for pattern discovery
- Statistical analysis of weather patterns
- Comprehensive HTML reporting

🔧 System Integration:
- Systemd service and timer configuration
- Automated installation scripts
- Health check and monitoring tools
- Integration with existing sensor infrastructure

📚 Documentation & Examples:
- Complete API documentation
- Grafana dashboard configurations
- Usage examples and test scripts
- Troubleshooting guides

🔒 Security & Privacy:
- Sanitized configuration files with placeholder values
- Proper .gitignore for sensitive data exclusion
- Generic location coordinates (Berlin) in samples
- No hardcoded credentials or personal information

The implementation follows conventional commit standards and includes comprehensive testing, documentation, and deployment automation.

--- a/.env.sample
+++ b/.env.sample
@@ -2,7 +2,7 @@
 # Copy this file to .env and customize the values for your environment
 
 # InfluxDB Configuration
-INFLUXDB_HOST=192.168.50.107
+INFLUXDB_HOST=your_influxdb_host
 INFLUXDB_PORT=8086
 INFLUXDB_TOKEN=your_influxdb_token_here
 INFLUXDB_ORG=your_organization_name
