--- a/requirements.txt
+++ b/requirements.txt
@@ -43,3 +43,12 @@ black>=23.0.0,<24.0.0              # Code formatter
 flake8>=6.0.0,<7.0.0               # Linting
 isort>=5.12.0,<6.0.0               # Import sorting
 mypy>=1.0.0,<2.0.0                 # Static type checking
+
+# Weather Forecast Integration
+requests>=2.31.0,<3.0.0            # HTTP requests for weather API
+pytz>=2023.3,<2024.0               # Timezone handling for weather data
+pandas>=2.0.0,<3.0.0               # Data manipulation and analysis for forecast accuracy
+
+# Data Analysis & Profiling (for future weather analysis features)
+ydata-profiling>=4.5.0,<5.0.0      # Data profiling and analysis
+mlxtend>=0.22.0,<1.0.0             # Machine learning extensions
