docs: Update installation instructions and fix weather service defects
- Updated installation instructions with improved configuration examples
- Fixed weather service configuration and deployment issues
- Enhanced documentation for better user experience

--- a/.env.sample
+++ b/.env.sample
@@ -1,11 +1,13 @@
 # Ruuvi Sensor Service Configuration
 # Copy this file to .env and customize the values for your environment
 
-# InfluxDB Configuration
-INFLUXDB_HOST=your_influxdb_host
+# InfluxDB Configuration (Remote Server)
+# Configure these settings to connect to your remote InfluxDB server
+# (Docker container, separate machine, or cloud instance)
+INFLUXDB_HOST=192.168.1.100
 INFLUXDB_PORT=8086
 INFLUXDB_TOKEN=your_influxdb_token_here
-INFLUXDB_ORG=your_organization_name
+INFLUXDB_ORG=your_organization
 INFLUXDB_BUCKET=ruuvi_sensors
 INFLUXDB_TIMEOUT=30
 INFLUXDB_VERIFY_SSL=true
@@ -42,3 +44,7 @@ PERFORMANCE_LOG_INTERVAL=300
 
 # Virtual Environment Check
 VIRTUAL_ENV_REQUIRED=true
+
+# Installation Paths
+RUUVI_INSTALL_DIR=/opt/ruuvi-sensor-service
+RUUVI_SERVICE_USER=ruuvi
