--- a/.env.weather.sample
+++ b/.env.weather.sample
@@ -4,7 +4,7 @@
 # Enable weather forecast functionality
 WEATHER_ENABLED=true
 
-# Location coordinates (Berlin, Germany by default)
+# Location coordinates (example: Berlin, Germany)
 WEATHER_LOCATION_LATITUDE=52.5200
 WEATHER_LOCATION_LONGITUDE=13.4050
 WEATHER_TIMEZONE=Europe/Berlin
